--- a/src/app.html
+++ b/src/app.html
@@ -1,8 +1,10 @@
-<!DOCTYPE html>
-<html lang="de">
+<!doctype html>
+<!-- set global language here-->
+<html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 		%sveltekit.head%
 	</head>
@@ -21,3 +23,4 @@
 		  </script>
 	</body>
 </html>
+
